# learning-architecture-patterns-with-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
resources/db/initialisation/: 01_create_users_and_schemas.sql
resources/db/migration/: V2022.12.01.00.46.53__Add_initial_tables.sql  env.py
resources/db/migration/versions/: 8831260306e6_added_index_on_sku.py  ad6ba1747c12_initialize_batch_entity.py
src/allocation/: config.py  models.py
src/allocation/application/: services.py
src/allocation/domain/: models.py  repositories.py  repository.py  services.py
src/allocation/infrastructure/: models.py  repositories.py
src/allocation/interface/: api.py
tests/: test_batches.py
tests/unit/: conftest.py
tests/unit/domain/: test_batches.py
tests/unit/infrastructure/: test_models.py
