[tool.poetry]
name = "allocation"
version = "0.1.0"
description = ""
authors = ["Dongkyun You <peppydays@gmail.com>"]
readme = "README.md"
packages = [{include = "allocation", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.0b3"
mysqlclient = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = {extras = ["d"], version = "^22.10.0"}
pre-commit = "^2.20.0"
jupyter = "^1.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
